# f1sh-3d

./: .gitignore  CMakeLists.txt
src/: app.cpp
src/core/: camera.hpp  framebuffer.hpp  mesh.hpp  pipeline.hpp  raster.hpp  shade.hpp
src/math/: epsilon.hpp  la.hpp  mat3.hpp  mat4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/platform/: ibackend.hpp  input.hpp  sdl_app.cpp  sdl_app.hpp
src/platform/sdl/: backend_sdl.cpp  backend_sdl.hpp
src/telemetry/: profiler.hpp  stats.hpp
src/ui/: hud.hpp  panel.hpp
src/utils/: bitfont.cpp  timer.cpp
tests/: CMakeLists.txt
